--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,25 @@
 .idea
 .venv
 node_modules
+
+# dependencies
+
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
